--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
               <div id="bs-details" class="project-more" hidden>
                 <div class="project-more-inner">
                   <h5 class="underline">Challenges</h5>
-                  <p>This was my first 3D print, so there was a lot of trial and error since it was such a huge project...</p>
+                  <p>This was my first 3D print! There was a lot of trial and error since I was new to 3D modeling. I learned back in high-school on how to 3D model amateurishly using Fusion360, but this put my skills to the test since this was a more practical setting. I remember needing to mess with the supports and testing out several types of brims due to the parts I made constantly warping, but we got past the challenges! I played around with resin and plastic weld as a solution to fill in all the inconsistencies (and because I ran out of money for more filament) and I'm satisfied with how it came out in the end.</p>
                   <h5>The final product!</h5>
                   <figure class="project-photo-wrap">
                     <img src="assets/projects/buster-sword-final.jpg" alt="Finished Buster Sword mounted on the wall" class="project-photo" loading="lazy" decoding="async"/>
                     <figcaption class="caption">Finished build mounted on my wall :)</figcaption>
                   </figure>
                   <h5>Final Thoughts</h5>
-                  <p>I'm really happy with how this project turned out...</p>
+                  <p>I'm really happy with how the project came out! I'm really not sure why I chose to do something so huge as my first project honestly, but I admit its made doing smaller projects feel so much easier so I would gladly do it again.</p>
                 </div>
               </div>
             </div>
