Better Title.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Cody's Portfolio</title>
+  <title>Cody's Workshop</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=DotGothic16&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css"/>
   <script defer src="script.js"></script>
@@ -210,15 +210,13 @@
     </button>
     <audio id="buddyAudio" src="assets/audio/sticker-theme.mp3" preload="auto" loop></audio>
 
-    <!-- Optional external SFX (override WebAudio fallback if present) -->
     <audio id="sfxClick"   src="assets/audio/ui-click.mp3" preload="auto"></audio>
     <audio id="sfxDarkOn"  src="assets/audio/dark-on.mp3"  preload="auto"></audio>
     <audio id="sfxDarkOff" src="assets/audio/dark-off.mp3" preload="auto"></audio>
-    <!-- Error/fail sound when clicking a launcher that’s already at the front -->
+    <!-- Error/fail Zelda fail sound when clicking a launcher that’s already at the front -->
     <audio id="sfxFail"    src="assets/audio/ui-fail.mp3"  preload="auto"></audio>
   </div>
 
-  <!-- Standby overlay template -->
   <template id="standbyTemplate">
     <div class="standby-overlay">
       <div class="standby-card">
