--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <input type="text" value="codyle129@gmail.com" disabled aria-disabled="true"/>
           </div>
           <hr class="rule"/>
-          <form id="contactForm" autocomplete="on">
+          <form id="contactForm" action="https://formspree.io/f/xpwygbrg" method="POST" autocomplete="on">
             <div class="form-row">
               <label for="name">Your Name</label>
               <input id="name" name="name" type="text" required placeholder="e.g. Aerith">
