Updated Contact Section
Removed extra text because I fixed contact issue (for now)

--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,7 @@
             </div>
             <div class="form-row">
               <label for="message">Message</label>
-              <textarea id="message" name="message" rows="8" required placeholder="Write your message here... (May not be working yet so I included my email just in case)"></textarea>
+              <textarea id="message" name="message" rows="8" required placeholder="Write your message here..."></textarea>
             </div>
             <div class="form-row captcha">
               <label id="captchaLabel" for="captchaAnswer">Prove you’re human:</label>
